# ferramentas-cli

./: .gitignore  CHECKLIST-RELEASE.md  Cargo.toml  INSTALACAO.md  MATRIZ-COMPATIBILIDADE.md  PLANO-CLI-SDK.md  README.md  RELEASE.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
scripts/release/: package.ps1  package.sh
src/: construir.rs  executar.rs  main.rs  novo.rs  toolchain.rs
templates/console/: README.md.tpl  pordosol.proj.tpl
templates/console/src/: programa.pr.tpl
templates/web/: README.md.tpl  pordosol.proj.tpl
templates/web/src/: programa.pr.tpl
tests/: README.md  cli_basic.rs  e2e_new_build_run.ps1  e2e_new_build_run.sh  e2e_quality.rs
