[package]
name = "ferramentas-cli"
version = "0.1.0"
edition = "2021"

# Nome do executável instalado
[[bin]]
name = "pordosol"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
walkdir = "2.5"
which = "6.0"
path-absolutize = "3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []

[dev-dependencies]
tempfile = "3.10"
